--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<h1>Choi's personal website~~</h1>
+<h3>Choi's personal website~~</h3>
 <h1> Hello I'm Choi </h1>
 
+<article>
+    <header>
+      <h1>Choi's personal website~~</h1>
+      <p>Posted by Choi Juhwan</p>
+      <p>Some additional information here</p>
+    </header>
+    <img src="choi.jpg"/>
+    <p>Hi</p>
+</article>
