--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-
-    <header>
-      <h1>Choi's personal website~~</h1>
-      <p>Posted by Choi Juhwan</p>
-      <p>Some additional information here</p>
-    </header>
-    <img src="choi.jpg"/>
-    <p>Hi</p>
+<header>
+    <h1>Choi's personal website~~</h1>
+    <p>Posted by Choi Juhwan</p>
+    <p>Some additional information here</p>
+</header>
+<img src="pig.jpg"/>
+<p>Hi</p>
