update on content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <header>
     <h1>Choi's personal website~~</h1>
     <p>Posted by Choi Juhwan</p>
-    <p>Some additional information here</p>
 </header>
 <img src="pig.jpg"/>
-<p>Hi, my name is choi</p>
+<p>Hi, my name is choi and i'm a pig</p>
