update bts question

--- a/bts/home.html
+++ b/bts/home.html
@@ -29,6 +29,9 @@
         padding-right: 10px;
     }
 
+    .nav.a {
+        font-size: 3px;
+    }
     
 </style>
 <body>
@@ -37,16 +40,16 @@
         <div class="logo">
             <img src="images/bts_logo.png" width="50px" height="50px">
         </div>
-        <li class="nav-item">
+        <li class="nav-item col-sm text-center">
         <a class="nav-link text-dark" href="summary.html">Summary</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-sm text-center">
         <a class="nav-link text-dark" href="formation.html">Formation and early years</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-sm text-center">
         <a class="nav-link text-dark" href="mainstream.html">Mainstream and international breakthrough</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-sm text-center">
         <a class="nav-link text-dark" href="culture.html">Cultural Impact</a>
         </li>
     </ul>
