--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </style>
 <body>
     <div class="header finisher-header" style="width: 100%; height: 300px;">
-        <h1 class="name animate__animated animate__bounce">Choi Juhwan</h1>
+        <!-- <h1 class="name animate__animated animate__bounce">Choi Juhwan</h1> -->
         <p class="text_2">I am an <span class="lead"></span>
             <!-- Aspiring Billionaire -->
         </p>
@@ -82,16 +82,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="sajc.JPG" class="d-block w-100" alt="...">
+            <img src="image/sajc.JPG" class="d-block w-100" alt="...">
           </div>
                     <div class="carousel-item">
-            <img src="img2.JPG" class="d-block w-100" alt="...">
+            <img src="image/img2.JPG" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img1.JPG" class="d-block w-100" alt="...">
+            <img src="image/img1.JPG" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img3.JPG" class="d-block w-100" alt="...">
+            <img src="image/img3.JPG" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -216,7 +216,7 @@
         </div>
     </div>
 
-    <div class="container mt-5">
+    <!-- <div class="container mt-5">
         <h3 class="text-center">Contact me</h3>
         <div class="row" id="contact">
             <div class="col-lg-3">
@@ -257,7 +257,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <script src="finisher-header.es5.min.js" type="text/javascript"></script>
