--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt'></i>Scroll down</a>
                 </div>
 
-                <img src="img/home.jpg" alt="" class="home__img">
+                <img src="img/profile_choi" alt="" class="home__img">
             </div>
         </section>
     </main>
@@ -62,11 +62,11 @@
             <div>
                 <h2 class="about__subtitle">I'am Choi Juhwan</h2>
                 <span class="about__profession">Frontend Developer</span>
-                <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas eaque odio mollitia officiis accusamus quos voluptates velit qui assumenda consequatur, molestiae quibusdam, veniam illo repellendus. Possimus repellendus recusandae excepturi rerum.</p>
+                <p class="about__text">Hello! I am a Sophomore at Singapore Management University, pursuing a Bachelor of Science (Information Systems). As someone that is intellectually curious, I am always looking to learn new skills and challenge myself. I deelpy value interpersonal relationships and communication. I aspire to be a good front-end developer!</p>
 
                 <div class="about__social">
-                    <a href="#" class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="#" class="about__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.linkedin.com/in/juhwan-choi-861970219/" class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/choijuhwan8" class="about__social-icon"><i class='bx bxl-github' ></i></a>
                     <a href="#" class="about__social-icon"><i class='bx bxl-telegram' ></i></a>
                 </div>
             </div>
@@ -83,13 +83,14 @@
                 <span class="skills__name">Html</span>
                 <span class="skills__name">Css</span>
                 <span class="skills__name">Javascript</span>
-                <span class="skills__name">React</span>
-                <span class="skills__name">Vue</span>
+                <!-- <span class="skills__name">React</span> -->
+                <span class="skills__name">Vue.js</span>
                 <span class="skills__name">Firebase</span>
+                <span class="skills__name">Bootstrap</span>
 
                 <h3 class="skills__subtitle">Design</h3>
                 <span class="skills__name">Figma</span>
-                <span class="skills__name">Photoshop</span>
+                <span class="skills__name">Maze</span>
             </div>
 
             <div class="skills__img">
@@ -104,6 +105,18 @@
 
         <div class="portfolio__container bd-grid">
             <div class="portfolio__img">
+                <img src="img/ZenLogo.png" alt="">
+                <div class="portfolio__link">
+                    <a href="ZenBuddy.html" class="portfolio__link-name">View details</a>
+                </div>
+            </div>
+            <div class="portfolio__img">
+                <img src="img/SmugLogo.png" alt="">
+                <div class="portfolio__link">
+                    <a href="Smug.html" class="portfolio__link-name">View details</a>
+                </div>
+            </div>
+            <!-- <div class="portfolio__img">
                 <img src="img/portfolio.jpg" alt="">
                 <div class="portfolio__link">
                     <a href="#" class="portfolio__link-name">View details</a>
@@ -126,19 +139,7 @@
                 <div class="portfolio__link">
                     <a href="#" class="portfolio__link-name">View details</a>
                 </div>
-            </div>
-            <div class="portfolio__img">
-                <img src="img/portfolio.jpg" alt="">
-                <div class="portfolio__link">
-                    <a href="#" class="portfolio__link-name">View details</a>
-                </div>
-            </div>
-            <div class="portfolio__img">
-                <img src="img/portfolio.jpg" alt="">
-                <div class="portfolio__link">
-                    <a href="#" class="portfolio__link-name">View details</a>
-                </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -159,7 +160,7 @@
                 <span class="contact__text">Singapore</span>
             </div>
 
-            <form action="" class="contact__form">
+            <!-- <form action="" class="contact__form">
                 <div class="contact__inputs">
                     <input type="text" placeholder="Name" class="contact__input">
                     <input type="mail" placeholder="Email" class="contact__input">
@@ -168,7 +169,10 @@
                 <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
 
                 <input type="submit" value="Enviar" class="contact__button">
-            </form>
+            </form> -->
+            <div class="skills__img">
+                <img src="img/pen.jpg" alt="">
+            </div>
         </div>
     </section>
 
@@ -176,7 +180,7 @@
         <div class="footer__container bd-grid">
             <div class="footer__data">
                 <h2 class="footer__title">Choi Juhwan</h2>
-                <p class="footer__text">I'm Choi Juhwan and this is my personal website</p>
+                <p class="footer__text">I'm Choi Juhwan and this is my personal website!</p>
             </div>
             <div class="footer__data">
                 <h2 class="footer__title">EXPLORE</h2>
