--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 
     <title>Portfolio Choi Juhwan</title>
+    <link rel="icon" type="image/png" href="/img/cat-solid-24.png">
+
 </head>
 <body>
     <!-- header -->
@@ -107,7 +109,7 @@
             <div class="portfolio__img">
                 <img src="img/ZenLogo.png" alt="">
                 <div class="portfolio__link">
-                    <a href="ZenBuddy.html" class="portfolio__link-name">View details</a>
+                    <a href="../choijuhwan8.github.io/Zenbuddy.html" class="portfolio__link-name">View details</a>
                 </div>
             </div>
             <div class="portfolio__img">
