--- a/Zenbuddy.html
+++ b/Zenbuddy.html
@@ -11,7 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 
-    <title>Portfolio Choi Juhwan</title>
+    <title>ZenBuddy</title>
 </head>
 <body>
     
