--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="portfolio__img">
                 <img src="img/ZenLogo.png" alt="">
                 <div class="portfolio__link">
-                    <a href="../choijuhwan8.github.io/Zenbuddy.html" class="portfolio__link-name">View details</a>
+                    <a href="Zenbuddy.html" class="portfolio__link-name">View details</a>
                 </div>
             </div>
             <div class="portfolio__img">
